# quark-lang

./: .gitignore  .gitmodules  CMakeLists.txt  Doc.md  README.md  build.bat  build.sh  fasm
include/quark/: ast.h  parser.h  semantic.h  symbol_table.h  token.h  type_context.h
include/quark/attributes/: attributes.h
include/quark/backend/: ccodegen.h  codegen.h  fasmcodegen.h
include/quark/codegen/: ccodegen.h  ir.h  ir_gen.h
include/quark/frontend/: ast.h  lexer.h  parser.h  token.h
include/quark/ir/: ir.h  ir_gen.h
include/quark/linker/: linker.h
include/quark/modules/: module.h
include/quark/semantic/: attributes.h  semantic.h  symbol_table.h
include/quark/support/: symbol_path.h  (+2 more)
include/utils/: colors.h  errors.h  file_manager.h  logger.h  options.h
qkrt/common/: format.asm  string.asm
qkrt/linux/: arena.asm  file.asm  format.asm  io.asm
qkrt/windows/: arena.asm  file.asm  format.asm  io.asm
scripts/: release.ps1  release.sh
src/: main.cpp
src/backend/: ccodegen.cpp  fasmcodegen.cpp
src/core/: ir_dump.cpp  ir_gen.cpp  parser.cpp  semantic.cpp  symbol_table.cpp  token.cpp
src/frontend/: lexer.cpp  parser.cpp
src/ir/: ir_dump.cpp  ir_gen.cpp
src/linker/: linker.cpp
src/modules/: modules.cpp
src/semantic/: semantic.cpp  symbol_table.cpp
src/support/: symbol_path.cpp  type_context.cpp
src/utils/: errors.cpp  file_manager.cpp  logger.cpp  options.cpp
std/: arena.qk  guard.qk  io.qk
std/arena/: arena.qk
std/col/: pair.qk
std/io/: io.qk
std/types/: option.qk
tests/: array_test.qk  attr_hide_internal.qk  attr_hide_pub.qk  attr_priv_cross.qk  attr_priv_var_cross.qk  cast.qk  cast_all.qk  char_test.qk  file_write.qk  float_full.qk  float_test.qk  func_test.qk  game.qk  generic_func.qk  generic_func2.qk  generic_optional.qk  generic_simple.qk  lib_hidden.qk  lib_priv.qk  lib_priv_var.qk  main.qk  operator_overload.qk  region_test.qk  stdin_read.qk  string_escape_test.qk  stringify.qk  stringify_full.qk
toolchains/: linux-x86_64.cmake  windows-x86_64.cmake
